// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Popover styles should render popover on auto 1`] = `
.circuit-2 {
  background-color: #FFF;
  padding: 12px 32px 12px 16px;
  border: 0;
  color: #1A1A1A;
  -webkit-text-decoration: none;
  text-decoration: none;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  font-size: 16px;
  line-height: 24px;
}

.circuit-2:hover {
  background-color: #F5F5F5;
  cursor: pointer;
}

.circuit-2:focus {
  outline: 0;
  box-shadow: inset 0 0 0 4px #AFD0FE;
}

.circuit-2:focus::-moz-focus-inner {
  border: 0;
}

.circuit-2:focus:not(:focus-visible) {
  box-shadow: none;
}

.circuit-2:active {
  background-color: #E6E6E6;
}

.circuit-2:disabled,
.circuit-2[disabled] {
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

.circuit-1 {
  margin-right: 8px;
}

@media (max-width:479px) {
  .circuit-0 {
    position: fixed;
    z-index: 30;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    background-color: rgba(0,0,0,0.4);
    pointer-events: none;
    visibility: hidden;
    opacity: 0;
    -webkit-transition: opacity 120ms ease-in-out,visibility 120ms ease-in-out;
    transition: opacity 120ms ease-in-out,visibility 120ms ease-in-out;
  }
}

@media (max-width:479px) {
  .circuit-0 {
    visibility: visible;
    opacity: 1;
  }
}

.circuit-4 {
  box-shadow: 0 3px 8px 0 rgba(0,0,0,0.2);
  padding: 8px 0px;
  border: 1px solid #E6E6E6;
  box-sizing: border-box;
  border-radius: 8px;
  background-color: #FFF;
  visibility: hidden;
  visibility: visible;
}

@media (max-width:479px) {
  .circuit-4 {
    -webkit-transform: translateY(100%);
    -ms-transform: translateY(100%);
    transform: translateY(100%);
    -webkit-transition: -webkit-transform 120ms ease-in-out,visibility 120ms ease-in-out;
    -webkit-transition: transform 120ms ease-in-out,visibility 120ms ease-in-out;
    transition: transform 120ms ease-in-out,visibility 120ms ease-in-out;
    border-bottom-right-radius: 0;
    border-bottom-left-radius: 0;
  }
}

@media (max-width:479px) {
  .circuit-4 {
    -webkit-transform: translateY(0);
    -ms-transform: translateY(0);
    transform: translateY(0);
  }
}

.circuit-3 {
  display: block;
  width: 100%;
  border: 1px solid #CCC;
  margin-top: 16px;
  margin-bottom: 16px;
  margin: 8px 16px;
  width: calc(100% - 16px*2);
}

<div>
  <div>
    <button
      aria-controls="popover_9"
      aria-expanded="true"
      aria-haspopup="true"
      id="trigger_10"
    >
      Button
    </button>
  </div>
  <div
    class="circuit-0"
  />
  <div
    style="position: absolute; left: 0px; top: 0px;"
  >
    <div
      aria-labelledby="trigger_10"
      class="circuit-4"
      id="popover_9"
      role="menu"
    >
      <button
        class="circuit-2"
        role="menuitem"
      >
        <svg
          class="circuit-1"
          fill="none"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g>
            <path
              clip-rule="evenodd"
              d="M2 8a6 6 0 1112 0A6 6 0 012 8zm6-8a8 8 0 100 16A8 8 0 008 0zm1 5a1 1 0 10-2 0v2H5a1 1 0 100 2h2v2a1 1 0 002 0V9h2a1 1 0 100-2H9V5z"
              fill="currentColor"
              fill-rule="evenodd"
            />
          </g>
        </svg>
        Add
      </button>
      <hr
        class="circuit-3"
      />
    </div>
  </div>
</div>
`;

exports[`Popover styles should render popover on bottom 1`] = `
.circuit-2 {
  background-color: #FFF;
  padding: 12px 32px 12px 16px;
  border: 0;
  color: #1A1A1A;
  -webkit-text-decoration: none;
  text-decoration: none;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  font-size: 16px;
  line-height: 24px;
}

.circuit-2:hover {
  background-color: #F5F5F5;
  cursor: pointer;
}

.circuit-2:focus {
  outline: 0;
  box-shadow: inset 0 0 0 4px #AFD0FE;
}

.circuit-2:focus::-moz-focus-inner {
  border: 0;
}

.circuit-2:focus:not(:focus-visible) {
  box-shadow: none;
}

.circuit-2:active {
  background-color: #E6E6E6;
}

.circuit-2:disabled,
.circuit-2[disabled] {
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

.circuit-1 {
  margin-right: 8px;
}

@media (max-width:479px) {
  .circuit-0 {
    position: fixed;
    z-index: 30;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    background-color: rgba(0,0,0,0.4);
    pointer-events: none;
    visibility: hidden;
    opacity: 0;
    -webkit-transition: opacity 120ms ease-in-out,visibility 120ms ease-in-out;
    transition: opacity 120ms ease-in-out,visibility 120ms ease-in-out;
  }
}

@media (max-width:479px) {
  .circuit-0 {
    visibility: visible;
    opacity: 1;
  }
}

.circuit-4 {
  box-shadow: 0 3px 8px 0 rgba(0,0,0,0.2);
  padding: 8px 0px;
  border: 1px solid #E6E6E6;
  box-sizing: border-box;
  border-radius: 8px;
  background-color: #FFF;
  visibility: hidden;
  visibility: visible;
}

@media (max-width:479px) {
  .circuit-4 {
    -webkit-transform: translateY(100%);
    -ms-transform: translateY(100%);
    transform: translateY(100%);
    -webkit-transition: -webkit-transform 120ms ease-in-out,visibility 120ms ease-in-out;
    -webkit-transition: transform 120ms ease-in-out,visibility 120ms ease-in-out;
    transition: transform 120ms ease-in-out,visibility 120ms ease-in-out;
    border-bottom-right-radius: 0;
    border-bottom-left-radius: 0;
  }
}

@media (max-width:479px) {
  .circuit-4 {
    -webkit-transform: translateY(0);
    -ms-transform: translateY(0);
    transform: translateY(0);
  }
}

.circuit-3 {
  display: block;
  width: 100%;
  border: 1px solid #CCC;
  margin-top: 16px;
  margin-bottom: 16px;
  margin: 8px 16px;
  width: calc(100% - 16px*2);
}

<div>
  <div>
    <button
      aria-controls="popover_21"
      aria-expanded="true"
      aria-haspopup="true"
      id="trigger_22"
    >
      Button
    </button>
  </div>
  <div
    class="circuit-0"
  />
  <div
    style="position: absolute; left: 0px; top: 0px;"
  >
    <div
      aria-labelledby="trigger_22"
      class="circuit-4"
      id="popover_21"
      role="menu"
    >
      <button
        class="circuit-2"
        role="menuitem"
      >
        <svg
          class="circuit-1"
          fill="none"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g>
            <path
              clip-rule="evenodd"
              d="M2 8a6 6 0 1112 0A6 6 0 012 8zm6-8a8 8 0 100 16A8 8 0 008 0zm1 5a1 1 0 10-2 0v2H5a1 1 0 100 2h2v2a1 1 0 002 0V9h2a1 1 0 100-2H9V5z"
              fill="currentColor"
              fill-rule="evenodd"
            />
          </g>
        </svg>
        Add
      </button>
      <hr
        class="circuit-3"
      />
    </div>
  </div>
</div>
`;

exports[`Popover styles should render popover on left 1`] = `
.circuit-2 {
  background-color: #FFF;
  padding: 12px 32px 12px 16px;
  border: 0;
  color: #1A1A1A;
  -webkit-text-decoration: none;
  text-decoration: none;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  font-size: 16px;
  line-height: 24px;
}

.circuit-2:hover {
  background-color: #F5F5F5;
  cursor: pointer;
}

.circuit-2:focus {
  outline: 0;
  box-shadow: inset 0 0 0 4px #AFD0FE;
}

.circuit-2:focus::-moz-focus-inner {
  border: 0;
}

.circuit-2:focus:not(:focus-visible) {
  box-shadow: none;
}

.circuit-2:active {
  background-color: #E6E6E6;
}

.circuit-2:disabled,
.circuit-2[disabled] {
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

.circuit-1 {
  margin-right: 8px;
}

@media (max-width:479px) {
  .circuit-0 {
    position: fixed;
    z-index: 30;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    background-color: rgba(0,0,0,0.4);
    pointer-events: none;
    visibility: hidden;
    opacity: 0;
    -webkit-transition: opacity 120ms ease-in-out,visibility 120ms ease-in-out;
    transition: opacity 120ms ease-in-out,visibility 120ms ease-in-out;
  }
}

@media (max-width:479px) {
  .circuit-0 {
    visibility: visible;
    opacity: 1;
  }
}

.circuit-4 {
  box-shadow: 0 3px 8px 0 rgba(0,0,0,0.2);
  padding: 8px 0px;
  border: 1px solid #E6E6E6;
  box-sizing: border-box;
  border-radius: 8px;
  background-color: #FFF;
  visibility: hidden;
  visibility: visible;
}

@media (max-width:479px) {
  .circuit-4 {
    -webkit-transform: translateY(100%);
    -ms-transform: translateY(100%);
    transform: translateY(100%);
    -webkit-transition: -webkit-transform 120ms ease-in-out,visibility 120ms ease-in-out;
    -webkit-transition: transform 120ms ease-in-out,visibility 120ms ease-in-out;
    transition: transform 120ms ease-in-out,visibility 120ms ease-in-out;
    border-bottom-right-radius: 0;
    border-bottom-left-radius: 0;
  }
}

@media (max-width:479px) {
  .circuit-4 {
    -webkit-transform: translateY(0);
    -ms-transform: translateY(0);
    transform: translateY(0);
  }
}

.circuit-3 {
  display: block;
  width: 100%;
  border: 1px solid #CCC;
  margin-top: 16px;
  margin-bottom: 16px;
  margin: 8px 16px;
  width: calc(100% - 16px*2);
}

<div>
  <div>
    <button
      aria-controls="popover_27"
      aria-expanded="true"
      aria-haspopup="true"
      id="trigger_28"
    >
      Button
    </button>
  </div>
  <div
    class="circuit-0"
  />
  <div
    style="position: absolute; left: 0px; top: 0px;"
  >
    <div
      aria-labelledby="trigger_28"
      class="circuit-4"
      id="popover_27"
      role="menu"
    >
      <button
        class="circuit-2"
        role="menuitem"
      >
        <svg
          class="circuit-1"
          fill="none"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g>
            <path
              clip-rule="evenodd"
              d="M2 8a6 6 0 1112 0A6 6 0 012 8zm6-8a8 8 0 100 16A8 8 0 008 0zm1 5a1 1 0 10-2 0v2H5a1 1 0 100 2h2v2a1 1 0 002 0V9h2a1 1 0 100-2H9V5z"
              fill="currentColor"
              fill-rule="evenodd"
            />
          </g>
        </svg>
        Add
      </button>
      <hr
        class="circuit-3"
      />
    </div>
  </div>
</div>
`;

exports[`Popover styles should render popover on right 1`] = `
.circuit-2 {
  background-color: #FFF;
  padding: 12px 32px 12px 16px;
  border: 0;
  color: #1A1A1A;
  -webkit-text-decoration: none;
  text-decoration: none;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  font-size: 16px;
  line-height: 24px;
}

.circuit-2:hover {
  background-color: #F5F5F5;
  cursor: pointer;
}

.circuit-2:focus {
  outline: 0;
  box-shadow: inset 0 0 0 4px #AFD0FE;
}

.circuit-2:focus::-moz-focus-inner {
  border: 0;
}

.circuit-2:focus:not(:focus-visible) {
  box-shadow: none;
}

.circuit-2:active {
  background-color: #E6E6E6;
}

.circuit-2:disabled,
.circuit-2[disabled] {
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

.circuit-1 {
  margin-right: 8px;
}

@media (max-width:479px) {
  .circuit-0 {
    position: fixed;
    z-index: 30;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    background-color: rgba(0,0,0,0.4);
    pointer-events: none;
    visibility: hidden;
    opacity: 0;
    -webkit-transition: opacity 120ms ease-in-out,visibility 120ms ease-in-out;
    transition: opacity 120ms ease-in-out,visibility 120ms ease-in-out;
  }
}

@media (max-width:479px) {
  .circuit-0 {
    visibility: visible;
    opacity: 1;
  }
}

.circuit-4 {
  box-shadow: 0 3px 8px 0 rgba(0,0,0,0.2);
  padding: 8px 0px;
  border: 1px solid #E6E6E6;
  box-sizing: border-box;
  border-radius: 8px;
  background-color: #FFF;
  visibility: hidden;
  visibility: visible;
}

@media (max-width:479px) {
  .circuit-4 {
    -webkit-transform: translateY(100%);
    -ms-transform: translateY(100%);
    transform: translateY(100%);
    -webkit-transition: -webkit-transform 120ms ease-in-out,visibility 120ms ease-in-out;
    -webkit-transition: transform 120ms ease-in-out,visibility 120ms ease-in-out;
    transition: transform 120ms ease-in-out,visibility 120ms ease-in-out;
    border-bottom-right-radius: 0;
    border-bottom-left-radius: 0;
  }
}

@media (max-width:479px) {
  .circuit-4 {
    -webkit-transform: translateY(0);
    -ms-transform: translateY(0);
    transform: translateY(0);
  }
}

.circuit-3 {
  display: block;
  width: 100%;
  border: 1px solid #CCC;
  margin-top: 16px;
  margin-bottom: 16px;
  margin: 8px 16px;
  width: calc(100% - 16px*2);
}

<div>
  <div>
    <button
      aria-controls="popover_33"
      aria-expanded="true"
      aria-haspopup="true"
      id="trigger_34"
    >
      Button
    </button>
  </div>
  <div
    class="circuit-0"
  />
  <div
    style="position: absolute; left: 0px; top: 0px;"
  >
    <div
      aria-labelledby="trigger_34"
      class="circuit-4"
      id="popover_33"
      role="menu"
    >
      <button
        class="circuit-2"
        role="menuitem"
      >
        <svg
          class="circuit-1"
          fill="none"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g>
            <path
              clip-rule="evenodd"
              d="M2 8a6 6 0 1112 0A6 6 0 012 8zm6-8a8 8 0 100 16A8 8 0 008 0zm1 5a1 1 0 10-2 0v2H5a1 1 0 100 2h2v2a1 1 0 002 0V9h2a1 1 0 100-2H9V5z"
              fill="currentColor"
              fill-rule="evenodd"
            />
          </g>
        </svg>
        Add
      </button>
      <hr
        class="circuit-3"
      />
    </div>
  </div>
</div>
`;

exports[`Popover styles should render popover on top 1`] = `
.circuit-2 {
  background-color: #FFF;
  padding: 12px 32px 12px 16px;
  border: 0;
  color: #1A1A1A;
  -webkit-text-decoration: none;
  text-decoration: none;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  font-size: 16px;
  line-height: 24px;
}

.circuit-2:hover {
  background-color: #F5F5F5;
  cursor: pointer;
}

.circuit-2:focus {
  outline: 0;
  box-shadow: inset 0 0 0 4px #AFD0FE;
}

.circuit-2:focus::-moz-focus-inner {
  border: 0;
}

.circuit-2:focus:not(:focus-visible) {
  box-shadow: none;
}

.circuit-2:active {
  background-color: #E6E6E6;
}

.circuit-2:disabled,
.circuit-2[disabled] {
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

.circuit-1 {
  margin-right: 8px;
}

@media (max-width:479px) {
  .circuit-0 {
    position: fixed;
    z-index: 30;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    background-color: rgba(0,0,0,0.4);
    pointer-events: none;
    visibility: hidden;
    opacity: 0;
    -webkit-transition: opacity 120ms ease-in-out,visibility 120ms ease-in-out;
    transition: opacity 120ms ease-in-out,visibility 120ms ease-in-out;
  }
}

@media (max-width:479px) {
  .circuit-0 {
    visibility: visible;
    opacity: 1;
  }
}

.circuit-4 {
  box-shadow: 0 3px 8px 0 rgba(0,0,0,0.2);
  padding: 8px 0px;
  border: 1px solid #E6E6E6;
  box-sizing: border-box;
  border-radius: 8px;
  background-color: #FFF;
  visibility: hidden;
  visibility: visible;
}

@media (max-width:479px) {
  .circuit-4 {
    -webkit-transform: translateY(100%);
    -ms-transform: translateY(100%);
    transform: translateY(100%);
    -webkit-transition: -webkit-transform 120ms ease-in-out,visibility 120ms ease-in-out;
    -webkit-transition: transform 120ms ease-in-out,visibility 120ms ease-in-out;
    transition: transform 120ms ease-in-out,visibility 120ms ease-in-out;
    border-bottom-right-radius: 0;
    border-bottom-left-radius: 0;
  }
}

@media (max-width:479px) {
  .circuit-4 {
    -webkit-transform: translateY(0);
    -ms-transform: translateY(0);
    transform: translateY(0);
  }
}

.circuit-3 {
  display: block;
  width: 100%;
  border: 1px solid #CCC;
  margin-top: 16px;
  margin-bottom: 16px;
  margin: 8px 16px;
  width: calc(100% - 16px*2);
}

<div>
  <div>
    <button
      aria-controls="popover_15"
      aria-expanded="true"
      aria-haspopup="true"
      id="trigger_16"
    >
      Button
    </button>
  </div>
  <div
    class="circuit-0"
  />
  <div
    style="position: absolute; left: 0px; top: 0px;"
  >
    <div
      aria-labelledby="trigger_16"
      class="circuit-4"
      id="popover_15"
      role="menu"
    >
      <button
        class="circuit-2"
        role="menuitem"
      >
        <svg
          class="circuit-1"
          fill="none"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g>
            <path
              clip-rule="evenodd"
              d="M2 8a6 6 0 1112 0A6 6 0 012 8zm6-8a8 8 0 100 16A8 8 0 008 0zm1 5a1 1 0 10-2 0v2H5a1 1 0 100 2h2v2a1 1 0 002 0V9h2a1 1 0 100-2H9V5z"
              fill="currentColor"
              fill-rule="evenodd"
            />
          </g>
        </svg>
        Add
      </button>
      <hr
        class="circuit-3"
      />
    </div>
  </div>
</div>
`;

exports[`Popover styles should render with default styles 1`] = `
.circuit-2 {
  background-color: #FFF;
  padding: 12px 32px 12px 16px;
  border: 0;
  color: #1A1A1A;
  -webkit-text-decoration: none;
  text-decoration: none;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  font-size: 16px;
  line-height: 24px;
}

.circuit-2:hover {
  background-color: #F5F5F5;
  cursor: pointer;
}

.circuit-2:focus {
  outline: 0;
  box-shadow: inset 0 0 0 4px #AFD0FE;
}

.circuit-2:focus::-moz-focus-inner {
  border: 0;
}

.circuit-2:focus:not(:focus-visible) {
  box-shadow: none;
}

.circuit-2:active {
  background-color: #E6E6E6;
}

.circuit-2:disabled,
.circuit-2[disabled] {
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

.circuit-1 {
  margin-right: 8px;
}

@media (max-width:479px) {
  .circuit-0 {
    position: fixed;
    z-index: 30;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    background-color: rgba(0,0,0,0.4);
    pointer-events: none;
    visibility: hidden;
    opacity: 0;
    -webkit-transition: opacity 120ms ease-in-out,visibility 120ms ease-in-out;
    transition: opacity 120ms ease-in-out,visibility 120ms ease-in-out;
  }
}

@media (max-width:479px) {
  .circuit-0 {
    visibility: visible;
    opacity: 1;
  }
}

.circuit-4 {
  box-shadow: 0 3px 8px 0 rgba(0,0,0,0.2);
  padding: 8px 0px;
  border: 1px solid #E6E6E6;
  box-sizing: border-box;
  border-radius: 8px;
  background-color: #FFF;
  visibility: hidden;
  visibility: visible;
}

@media (max-width:479px) {
  .circuit-4 {
    -webkit-transform: translateY(100%);
    -ms-transform: translateY(100%);
    transform: translateY(100%);
    -webkit-transition: -webkit-transform 120ms ease-in-out,visibility 120ms ease-in-out;
    -webkit-transition: transform 120ms ease-in-out,visibility 120ms ease-in-out;
    transition: transform 120ms ease-in-out,visibility 120ms ease-in-out;
    border-bottom-right-radius: 0;
    border-bottom-left-radius: 0;
  }
}

@media (max-width:479px) {
  .circuit-4 {
    -webkit-transform: translateY(0);
    -ms-transform: translateY(0);
    transform: translateY(0);
  }
}

.circuit-3 {
  display: block;
  width: 100%;
  border: 1px solid #CCC;
  margin-top: 16px;
  margin-bottom: 16px;
  margin: 8px 16px;
  width: calc(100% - 16px*2);
}

<div>
  <div>
    <button
      aria-controls="popover_3"
      aria-expanded="true"
      aria-haspopup="true"
      id="trigger_4"
    >
      Button
    </button>
  </div>
  <div
    class="circuit-0"
  />
  <div
    style="position: absolute; left: 0px; top: 0px;"
  >
    <div
      aria-labelledby="trigger_4"
      class="circuit-4"
      id="popover_3"
      role="menu"
    >
      <button
        class="circuit-2"
        role="menuitem"
      >
        <svg
          class="circuit-1"
          fill="none"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g>
            <path
              clip-rule="evenodd"
              d="M2 8a6 6 0 1112 0A6 6 0 012 8zm6-8a8 8 0 100 16A8 8 0 008 0zm1 5a1 1 0 10-2 0v2H5a1 1 0 100 2h2v2a1 1 0 002 0V9h2a1 1 0 100-2H9V5z"
              fill="currentColor"
              fill-rule="evenodd"
            />
          </g>
        </svg>
        Add
      </button>
      <hr
        class="circuit-3"
      />
    </div>
  </div>
</div>
`;
